--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -7,11 +7,11 @@
 
 .navbar {
   background: linear-gradient(black 65%, transparent);
-  height: 100px;
+  height: 14vw;
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 1.2rem;
+  font-size: 3vw;
   position: sticky;
   top: 0;
   z-index: 999;
@@ -22,8 +22,10 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 80px;
+  height: 16vw;
   max-width: 1500px;
+
+  
 }
 
 .navbar-logo {
@@ -32,22 +34,24 @@
   background-repeat: no-repeat;
   background-position: left center;
 
-  height: 50%;  
-  width: 30%;                  
-  
-  margin-left: 5px;    
-  margin-top: 0px; 
+  height: 9vw;  
+  width: 35%;  
+  translate: 0 -25%;              
+     
+
   cursor: pointer;
   text-decoration: none;
 
   display: flex;
   align-items: center;
+  transition: 0.2s ease-in;
 }
 
 .navbar-logo:hover {
   background-image: url('/public/JR_SVG/Asset 7.svg');
   /* box-shadow: inset 0 0 70px 50px rgb(24, 24, 24); */
-  transition: 0.1s ease-in;
+  transition: 0.2s ease-in;
+
 }
 
 .fa-typo3 {
@@ -58,17 +62,22 @@
 .nav-menu {
   display: grid;
   grid-template-columns: repeat(4, auto);
-  grid-gap: 1px;
+  grid-gap: 2vw;
   list-style: none;
   text-align: right;
-  width: 80vw;
+  width: 83vw;
   justify-content: end;
-  margin-right: 1rem;
-  font-size: 50%
+  margin-right: 7vw;
+
+
+  font-size: 2vw;
+  translate: 15% -10%;
 }
 
 .nav-item {
-  height: 90px;
+  height: 17vw;
+  margin-top: 2vw;
+  margin-bottom: 2vw;
 
 }
 
@@ -82,13 +91,16 @@
   text-decoration: none;
   padding: 0.5rem 1rem;
   height: 100%;
+  transition: 0.2s ease-in;
+
 }
 
 .nav-links:hover {
   color: rgba(255, 31, 31, 0.611);
   
   font-weight: 900;
-  transition: all 0.1s ease-in-out;
+  transition: 0.2s ease-in;
+
 }
 
 .fa-bars {
@@ -101,6 +113,9 @@
 
 .menu-icon {
   display: none;
+  translate: -120% -20%;
+  height: 6vw;
+  transition: 0.2s ease-in;
 }
 
 @media screen and (max-width: 720px) {
@@ -109,6 +124,7 @@
   }
 
   .nav-menu {
+    translate: -5%;
     background: black;
     display: flex;
     flex-direction: column;
@@ -116,10 +132,10 @@
     height: 34vh;
     position: absolute;
     top: 70px;
-    right: -100vw;
     left: auto;
-    opacity: 1;
-    transition: all 0.5s ease;
+    right: 50vw;
+    opacity: 0;
+    z-index:-1;
   }
 
   .image-logo2{
@@ -154,7 +170,9 @@
     position: absolute;
     top: 0;
     left: 0;
-    transform: translate(25%, 50%);
+    transform: translate(20%, 30%);
+    width: 25%;
+
   }
 
   .menu-icon {
